# CoWorkingTwitchBotWithGui

./: .gitignore  .replit  README.md  bot.py  bot_config.py  bot_runner.py  bot_runner.spec  chatbot_config.py  file_output.py  pomo_logic.py  pyproject.toml  requirements.txt  web_output.py
.github/workflows/: main.yml
BotResources/resources/: PomoBotUI.ui  botConfig.json  chatBotConfig.json  darkeum.qss  flipDict.json
BotResources/static/styles/: pomoBoard.css
BotResources/templates/: index.html  pomoBoard.html  pomoTemplate.html  taskTemplate.html
